--- a/index.html
+++ b/index.html
@@ -238,8 +238,8 @@
         bounds_group.addLayer(layer_ParitBoundry_2);
         map.addLayer(layer_ParitBoundry_2);
         var overlaysTree = [
-            {label: '<img src="legend/ParitBoundry_2.png" /> Parit Boundry', layer: layer_ParitBoundry_2},
-            {label: '<img src="legend/Blok_Polygon_1.png" /> Blok_Polygon', layer: layer_Blok_Polygon_1},
+            {label: '<img src="legend/ParitBoundry_2.png" /> Cuci Parit 2x2', layer: layer_ParitBoundry_2},
+            {label: '<img src="legend/Blok_Polygon_1.png" /> HGU PT.BAS', layer: layer_Blok_Polygon_1},
             {label: "ESRI Satellite", layer: layer_ESRISatellite_0},]
         var lay = L.control.layers.tree(null, overlaysTree,{
             //namedToggle: true,
